# sd-hwe-bench

./: .gitignore  .gitmodules  .lefthook.yml  .markdownlint-cli2.yaml  .markdownlint.yaml  AGENTS.md  CONTRIBUTING-zh.md  CONTRIBUTING.md  Containerfile  LICENSE  MEMO-EAC-PAPER.md  MEMO.md  README-zh.md  README.md  TEMP_MEMO_AIDC_V7_RERUN_20260630.md  pyproject.toml
canonical/aidc-detailed/docs/: dc-design-spec-60mw.md
canonical/aidc-detailed/facilities/: CHILLER-01.yaml  CHILLER-02.yaml  CHILLER-03.yaml  CHILLER-05.yaml  CHILLER-06.yaml  CHILLER-08.yaml  RAISED-FLOOR-01.yaml  TR-A.yaml
canonical/aidc-detailed/rooms/: ROW-B.yaml  (+2 more)
canonical/datacenter/: piki.toml  task_manifest.yaml
canonical/datacenter-hall/: piki.toml
canonical/datacenter-hall-60mw/: piki.toml
canonical/telecom-site/: piki.toml  task_manifest.yaml
docs/: METHODOLOGY.md  README.md  adl-piki-convention.md  canonical-project-guidelines.md  gemini-exclusion.md
docs/adr/: 0001-task-generation-strategy.md  0002-canonical-project-domains.md  0003-task-extraction-tooling.md  0004-commit-granularity-and-task-types.md  0005-canonical-repo-and-container-sandbox.md  0006-conceptual-design-multi-scheme-evaluation.md
docs/conventions/: adl-piki-convention.md
docs/evaluation/: methodology.md  scoring.md
docs/guides/: canonical-project-design.md
docs/issues/: 001-parallel-task-execution.md  002-parameterize-hardcoded-values.md
leaderboard/: results.json  results.md
papers/: sd-hwe-bench.zh.md
papers/engineering-ai-gaps/: AGENTS.md
papers/engineering-as-code/: .crossref.yaml  .gitignore  .markdownlint.yaml  AGENTS.md  Makefile  engineering-as-code-fse2027-draft.md  fse2027.md  package-lock.json  package.json  refs.bib
papers/engineering-as-code-eval-substrate/: AGENTS.md
papers/physical-engineering-as-code-eval-substrate/: AGENTS.md
papers/sd-hwe-bench/: .markdownlint.yaml  AGENTS.md  Makefile
pitch/: how-sd-hwe-bench-mirrors-swe-bench.md  swe-bench-for-hwe.md
scripts/: aggregate_eac_eval_substrate.py  aggregate_peac_eval_substrate.py  aggregate_representation_gap.py  api_pass1_batch.py  api_pass1_v2.py  assemble_eac_eval_substrate.py  assemble_engineering_ai_gaps.py  assemble_paper.py  assemble_paper_en.py  assemble_peac_eval_substrate.py  build-piki-image.sh  kimi_pass5_batch.py  pass5_batch.py  verify_aidc_benchmark.py
scripts/batch/: aidc-lifecycle-pass1.yaml  aidc-v7-deepseek-flash-pass1.yaml  aidc-v7-kimi-pass1.yaml  aidc-v7-pass1.yaml  constraint-gap-aidc-diagnostic-contract-rerun.yaml  constraint-gap-core.yaml  constraint-gap-p0.yaml  main-lifecycle-pass1.yaml  pass5.yaml  representation-gap-smoke.yaml
scripts/legacy/: api_pass1_batch.py
scripts/paper/: assemble-md.sh  slug-from-meta.py
site/: index.html
src/sd_hwe_bench/: __init__.py  __main__.py  cli.py  cli_common.py  console.py  dataset.py  harness.py  leaderboard.py  llm_judge.py  prompts.py  scorer.py  settings.py  task.py
tests/: conftest.py  test_actors.py  test_aidc_simulation_60mw.py  test_batch.py  test_constraints.py  test_critic_registry.py  test_critics.py  test_decision_critic.py  test_eac_eval_aggregate.py  test_env_injection.py  test_peac_eval_aggregate.py  test_reference_solutions.py  test_representation_fixture_checker.py  test_representation_gap_pipeline.py  test_run_parallel.py  test_run_repair_loop.py  test_scorer.py  test_settings.py  test_workspace.py
tools/: audit_runs.py  extract_tasks.py
tools/representation/: blender_gui_smoke.py  blender_headless_smoke.py  mcp_fixture_smoke.py  openscad_smoke.scad  run_blender_cua_keyboard_smoke.py  run_blender_gui_smoke.py  run_blender_headless_smoke.py  run_openscad_smoke.py  run_representation_experiment.py  run_representation_smoke_matrix.py
work/: audit_report_20260625.md  baseline_all_results.json  piki  run_api_baseline.py  run_baseline.sh  run_cli_baseline.py
work/legacy/: README.md  baseline_all_results.json  baseline_api_results.json  baseline_kimi_parsed.json  baseline_kimi_remaining.json  run_baseline.sh
(+1130 files in other folders)
