[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-hwe-bench"
version = "0.1.0"
description = "SD-HWE-Bench: A benchmark for Software-Defined Hardware Engineering — evaluating AI agents on declarative engineering design tasks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SD-HWE-Bench Contributors"},
]
keywords = [
    "benchmark",
    "engineering",
    "hardware-engineering",
    "sde",
    "rlvr",
    "ai-agent",
    "declarative-design",
    "piki",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
judge = [
    "deepeval>=4.0",
]

[project.urls]
Homepage = "https://github.com/indenscale/sd-hwe-bench"
Repository = "https://github.com/indenscale/sd-hwe-bench.git"
Issues = "https://github.com/indenscale/sd-hwe-bench/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[project.scripts]
sd-hwe-bench = "sd_hwe_bench.cli:main"
