[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-hwe-bench"
version = "0.1.0"
description = "SD-HWE-Bench: A benchmark for Software-Defined Hardware Engineering — evaluating AI agents on declarative engineering design tasks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SD-HWE-Bench Contributors"},
]
keywords = [
    "benchmark",
    "engineering",
    "hardware-engineering",
    "sde",
    "rlvr",
    "ai-agent",
    "declarative-design",
    "piki",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    # piki / adl 是 SD-HWE-Bench 的运行时引擎。在 monorepo 本地开发时，请通过
    # `uv pip install -e ../piki/adl -e ../piki` 以 editable 方式安装；
    # CI/生产环境使用下方锁定到具体 commit 的 git URL，保证可复现性。
    "adl @ git+https://github.com/IndenScale/piki.git@4655b56d0f577b75bd5d82379652cd65e35cea92#subdirectory=adl",
    "piki @ git+https://github.com/IndenScale/piki.git@4655b56d0f577b75bd5d82379652cd65e35cea92",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
judge = [
    "deepeval>=4.0",
]

[project.urls]
Homepage = "https://github.com/indenscale/sd-hwe-bench"
Repository = "https://github.com/indenscale/sd-hwe-bench.git"
Issues = "https://github.com/indenscale/sd-hwe-bench/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sd_hwe_bench = ["config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.uv.sources]
adl = { path = "../piki/adl", editable = true }
piki = { path = "../piki", editable = true }

[project.scripts]
sd-hwe-bench = "sd_hwe_bench.cli:main"
